k8s/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notefy-ingress
  namespace: staging
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - staging-notefy.ramtiin.ir
    secretName: notefy-staging-tls
  rules:
  - host: staging-notefy.ramtiin.ir
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: notefy-service
            port:
              number: 80
